@@ -1,5 +1,5 @@
 /*
- * "$Id: ps-pdf.cxx,v 1.89.2.147 2002/01/28 16:25:28 mike Exp $"
+ * "$Id: ps-pdf.cxx,v 1.89.2.148 2002/01/29 02:00:42 mike Exp $"
  *
  *   PostScript + PDF output routines for HTMLDOC, a HTML document processing
  *   program.
@@ -409,6 +409,7 @@ int
 pspdf_export(tree_t *document,	/* I - Document to export */
              tree_t *toc)	/* I - Table of contents for document */
 {
+  const char	*title_file;	/* Location of title image/file */
   uchar		*author,	/* Author of document */
 		*creator,	/* HTML file creator (Netscape, etc) */
 		*copyright,	/* File copyright */
@@ -513,18 +514,23 @@ pspdf_export(tree_t *document,	/* I - Document to export */
 
   if (TitlePage)
   {
+    title_file = file_find(Path, TitleImage);
+
 #ifdef WIN32
-    if (stricmp(file_extension(TitleImage), "htm") == 0 ||
-	stricmp(file_extension(TitleImage), "html") == 0 ||
-	stricmp(file_extension(TitleImage), "shtml") == 0)
+    if (stricmp(file_extension(TitleImage), "bmp") != 0 &&
+	stricmp(file_extension(TitleImage), "gif") != 0 &&
+	stricmp(file_extension(TitleImage), "jpg") != 0 &&
+	stricmp(file_extension(TitleImage), "png") != 0 &&
 #else
-    if (strcmp(file_extension(TitleImage), "htm") == 0 ||
-	strcmp(file_extension(TitleImage), "html") == 0 ||
-	strcmp(file_extension(TitleImage), "shtml") == 0)
+    if (strcmp(file_extension(TitleImage), "bmp") != 0 &&
+	strcmp(file_extension(TitleImage), "gif") != 0 &&
+	strcmp(file_extension(TitleImage), "jpg") != 0 &&
+	strcmp(file_extension(TitleImage), "png") != 0 &&
 #endif // WIN32
+        title_file != NULL)
     {
       // Write a title page from HTML source...
-      if ((fp = fopen(TitleImage, "rb")) == NULL)
+      if ((fp = fopen(title_file, "rb")) == NULL)
       {
 	progress_error(HD_ERROR_FILE_NOT_FOUND,
 	               "Unable to open title file \"%s\" - %s!",
@@ -10668,5 +10674,5 @@ flate_write(FILE  *out,		/* I - Output file */
 
 
 /*
- * End of "$Id: ps-pdf.cxx,v 1.89.2.147 2002/01/28 16:25:28 mike Exp $".
+ * End of "$Id: ps-pdf.cxx,v 1.89.2.148 2002/01/29 02:00:42 mike Exp $".
  */
